Fix Bestiary templates

--- a/src/content/posts/cored20rpg/actions.mdx
+++ b/src/content/posts/cored20rpg/actions.mdx
@@ -159,7 +159,7 @@ author: Антон "Palant" Палихов
 | Аркана  | Заклинания, магические предметы, элдрические символы, магические традиции, плоскости существования и некоторые существа (аберрации, конструкты, элементали, фей и чудовища) |
 | История | Исторические события и люди, древние цивилизации, войны и некоторые существа (гиганты и гуманоиды)                                                                          |
 | Анализ  | Ловушки, шифры, загадки и приспособления                                                                                                                                    |
-| Природа | Местность, флора, погода и некоторые существа (звери, драконы, оозы и растения)                                                                                             |
+| Природа | Местность, флора, погода и некоторые существа (звери, драконы, слизи и растения)                                                                                             |
 | Религия | Божества, религиозные иерархии и обряды, священные символы, культы и некоторые существа (Небожители, изверги и нежить)                                                      |
 
 ## <a name="_toc127016790"></a><a name="_toc158186388"></a>Движение
