--- a/src/content/posts/cored20rpg/bestiary-templates.mdx
+++ b/src/content/posts/cored20rpg/bestiary-templates.mdx
@@ -91,7 +91,7 @@ author: Антон "Palant" Палихов
 
 Легендарная Устойчивость дается многим легендарным монстрам, чтобы предотвратить их захват способностью "спасись или ошеломлен", такой как заклинание удержания монстра или способность монаха "Ошеломляющий удар". С одной стороны, эта механика может предотвратить преждевременное завершение боя с боссом из-за неудачного спасброска против мощного эффекта. С другой стороны, некоторые DM считают эту механику скучной и/или несправедливой по отношению к игрокам. В таком случае рассмотрите следующие альтернативы:
 
-**Вырваться на свободу Е**сли существо недееспособно в начале своего хода, эффект, вызвавший это состояние, немедленно заканчивается на монстре, а существо получает урон, равный его рейтингу вызова.
+**Вырваться на свободу** Если существо недееспособно в начале своего хода, эффект, вызвавший это состояние, немедленно заканчивается на монстре, а существо получает урон, равный его рейтингу вызова.
 
 **Свобода действий.** Существо имеет преимущество в Спасбросках против эффектов, которые могут его сковать или обездвижить.
 
@@ -153,7 +153,7 @@ author: Антон "Palant" Палихов
 
 **Off-Hand Counter.** Когда %%creaturename%% промахивается по атаке ближнего боя атакующего, которого он может видеть в пределах 5 футов, %%creaturename%% делает атаку шорт-сквордом против атакующего.
 
-**Парирование.** Если атакующий наносит %%creaturename%% удар в ближнем бою и %%creaturename%% видит атакующего, он может добавить 2 (1d4) к своему КЗ против начальной атаки, при условии, что он владеет оружием ближнего боя.
+**Парирование.** Если атакующий наносит %%creaturename%% удар в ближнем бою и %%creaturename%% видит атакующего, он может добавить 2 (1к4) к своему КЗ против начальной атаки, при условии, что он владеет оружием ближнего боя.
 
 **Защита.** Когда атакующий, которого видит %%creaturename%%, делает бросок атаки против существа, находящегося в пределах 5 футов от %%creaturename%%, %%creaturename%% может наложить помеху на бросок атаки.
 
@@ -215,41 +215,52 @@ author: Антон "Palant" Палихов
 
 Наконец, дайте существу три мифических действия из перечисленных ниже.
 
-**Стремительность.** Существо перемещается на свою скорость, не провоцируя атаки возможности.
+1. **Стремительность.** Существо перемещается на свою скорость, не провоцируя атаки возможности.
 
-**Сильная атака.** Существо использует одну из своих сильных атак или дважды использует одну из своих слабых атак.
+2. **Сильная атака.** Существо использует одну из своих сильных атак или дважды использует одну из своих слабых атак.
 
-**Нападение (Затрачивает 2 действия).** Существо получает Преимущество при всех бросках атаки до конца своего следующего хода.
+3. **Нападение (Затрачивает 2 действия).** Существо получает Преимущество при всех бросках атаки до конца своего следующего хода.
 
-**Заклинание (Затраты 2 действия).** Существо произносит заклинание.
+4. **Заклинание (Затраты 2 действия).** Существо произносит заклинание.
 
-**Защита (Затраты 2 действия).** Существо получает преимущество при всех Спасбросках до конца своего следующего хода.
+5. **Защита (Затраты 2 действия).** Существо получает преимущество при всех Спасбросках до конца своего следующего хода.
 
 ### КОМАНДИР
 
 Командир - это монстр, который немного умнее, мудрее или харизматичнее своих сородичей или сверстников, что дает ему естественные лидерские навыки, которые он может использовать в бою. Более подробные рекомендации по созданию монстров-лидеров можно найти в моей домашней коллекции Warlord Collection.
 
-Настройка показателей характеристик. Показатели интеллекта, мудрости или харизмы существа увеличиваются на 2.
-Кости хитов. Существо получает две кости хитов.
-Командный союзник. Бонусным действием существо выбирает одного союзника, которого оно видит в радиусе 30 футов от себя. Если союзник видит и слышит монстра, он может сделать одну атаку оружием реакцией и получает преимущество при броске атаки.
-Лидерство (действие; перезаряжается после короткого или Длинного отдыха). В течение 1 минуты существо может произносить специальную команду или предупреждение, когда видимое им невраждебное существо в радиусе 30 футов от него делает бросок атаки или спасбросок. Существо может добавить к своему броску к4, если оно слышит и понимает монстра. Существо может одновременно использовать только одну кость Лидерства. Этот эффект заканчивается, если существо становится недееспособным.
+**Увеличение характеристик**. Показатели интеллекта, мудрости или харизмы существа увеличиваются на 2.
+
+**Кости хитов**. Существо получает две кости хитов.
+
+**Командный союзник**. Бонусным действием существо выбирает одного союзника, которого оно видит в радиусе 30 футов от себя. Если союзник видит и слышит монстра, он может сделать одну атаку оружием реакцией и получает преимущество при броске атаки.
+
+**Лидерство** (действие; 1/КО или ДО). В течение 1 минуты существо может произносить специальную команду или предупреждение, когда видимое им невраждебное существо в радиусе 30 футов от него делает бросок атаки или спасбросок. Существо может добавить к своему броску к4, если оно слышит и понимает монстра. Существо может одновременно использовать только одну кость Лидерства. Этот эффект заканчивается, если существо становится недееспособным.
 
 ### ОРДАЛИНГ
 
 Орда - это общий термин, используемый для обозначения любого монстра, который хорошо работает в группах. Хотя стаи демонов и нежити являются наиболее обычными примерами ордынцев в действии, этот термин также может использоваться для обозначения организованных солдат, которые хорошо работают вместе.
-Навыки. Существо получает навык "Атлетика". Если оно уже владело этим навыком, то вместо него оно приобретает опыт в этом навыке.
-Тактика стаи. Существо имеет преимущество при броске атаки против существа, если хотя бы один из союзников существа находится в пределах 5 футов от существа и союзник не выведен из строя.
-Существо также получает одну из следующих особенностей.
-Тактика построения. Существо имеет преимущество в Спасбросках против очарования, испуга, захвата или Обездвиживания, пока оно находится в пределах 5 футов хотя бы от одного союзника.
-Групповое возмездие. Когда существо уменьшается до 0 хитов в результате атаки в ближнем бою, один союзник существа может воспользоваться своей реакцией, чтобы совершить атаку оружием ближнего боя против нападавшего.
-Поведение мобов. Существо может использовать свое бонусное действие, чтобы попытаться схватить или толкнуть существо, если хотя бы один из союзников существа находится в пределах 5 футов от существа и союзник не недееспособен.
-Властная стая. Существо имеет преимущество при проверках на захват или отталкивание существа, если хотя бы один из союзников существа находится в пределах 5 футов от цели и союзник не выведен из строя.
-Стая. Существо добавляет дополнительную кость урона к броскам урона от оружия, находясь в пределах 5 футов от союзника, который не выведен из строя.
+
+**Навыки**. Существо получает навык "Атлетика". Если оно уже владело этим навыком, то вместо него оно приобретает опыт в этом навыке.
+
+**Тактика стаи**. Существо имеет преимущество при броске атаки против существа, если хотя бы один из союзников существа находится в пределах 5 футов от существа и союзник не выведен из строя.
+
+Существо также получает одну из следующих особенностей:
+
+1. **Тактика построения**. Существо имеет преимущество в Спасбросках против очарования, испуга, захвата или Обездвиживания, пока оно находится в пределах 5 футов хотя бы от одного союзника.
+
+2. **Групповое возмездие**. Когда существо уменьшается до 0 хитов в результате атаки в ближнем бою, один союзник существа может воспользоваться своей реакцией, чтобы совершить атаку оружием ближнего боя против нападавшего.
+
+3. **Поведение мобов**. Существо может использовать свое бонусное действие, чтобы попытаться схватить или толкнуть существо, если хотя бы один из союзников существа находится в пределах 5 футов от существа и союзник не недееспособен.
+
+4. **Властная стая**. Существо имеет преимущество при проверках на захват или отталкивание существа, если хотя бы один из союзников существа находится в пределах 5 футов от цели и союзник не выведен из строя.
+5. **Стая**. Существо добавляет дополнительную кость урона к броскам урона от оружия, находясь в пределах 5 футов от союзника, который не выведен из строя.
 
 ### СКРЫТЕНЬ
 
 СКРЫТЕНЬ - это особо скрытный монстр, способный оставаться незамеченным благодаря обычным навыкам или магическим способностям.
-Корректировка очков способностей. Показатель ловкости этого существа становится равным 13, если он был равен 12 или ниже.
+
+**Увеличение характеристик**. Показатель ловкости этого существа становится равным 13, если он был равен 12 или ниже.
 Навыки. Существо приобретает навык Скрытность. Если оно уже владело этим навыком, то вместо него оно получает опыт в этом навыке.
 Существо получает одну из следующих способностей.
 
@@ -261,11 +272,11 @@ author: Антон "Palant" Палихов
 
 Существо также получает одно из следующих свойств.
 
-**Окутать себя (действие).** Существо становится невидимым до конца своего следующего хода. Невидимость заканчивается, если существо делает бросок атаки, наносит урон или произносит сотворение заклинания.
+1. **Окутать себя (действие).** Существо становится невидимым до конца своего следующего хода. Невидимость заканчивается, если существо делает бросок атаки, наносит урон или произносит сотворение заклинания.
 
-**Скрытник.** Когда существо скрыто от существа и промахивается по нему атакой оружием дальнего боя, атака не раскрывает местоположение существа.
+2. **Скрытник.** Когда существо скрыто от существа и промахивается по нему атакой оружием дальнего боя, атака не раскрывает местоположение существа.
 
-**Бесследный.** Существо не оставляет следов, указывающих на то, где оно было или куда направляется.
+3. **Бесследный.** Существо не оставляет следов, указывающих на то, где оно было или куда направляется.
 
 ### ЗАКЛИНАТЕЛЬ
 
@@ -278,18 +289,20 @@ author: Антон "Palant" Палихов
 
 Воин - это монстр, использующий боевую подготовку для повышения своих боевых возможностей. Только лучшие воины могут считаться бойцами, но даже небольшое количество тренировок может создать значительный разрыв между воином и его сверстниками.
 
-Корректировка очков способностей. Показатель силы или ловкости существа увеличивается на 2.
+**Увеличение характеристик**. Показатель силы или ловкости существа увеличивается на 2.
 
-Экипировка. Существо приобретает навыки владения всеми видами оружия и доспехов. Не стесняйтесь улучшать его снаряжение по своему усмотрению.
+**Экипировка**. Существо приобретает навыки владения всеми видами оружия и доспехов. Не стесняйтесь улучшать его снаряжение по своему усмотрению.
 
-Кости хитов. Существо получает три костя хитов.
+**Кости хитов**. Существо получает три кости хитов.
 
 **Боевое Преимущество (1/ход).** Существо может нанести дополнительные 7 (2d6) урона существу, в которое оно попало при атаке оружием, если это существо находится в пределах 5 футов от союзника существа, который не выведен из строя.
 
-## №ШАБЛОНЫ ПО РОЛЯМ
+## ШАБЛОНЫ ПО РОЛЯМ
 
 ROLES
+
 Brutes
+
 The Aggressive, Brute, Charge, Rampage, Reckless, Relentless, and Siege Monster features are all appropriate for brutish monsters. In addition, consider using any of the following features to round out your brutes.
 Brawler. The creature can use its bonus action to attempt to grapple or shove a creature within its reach.
 Brutish Durability. Whenever The creature makes a saving throw, it can roll a d6 and add the result to its saving throw total.
@@ -380,7 +393,8 @@ Rapid Assault (Costs 3 Actions). The creature makes three attacks against one ta
 ## MONSTER POWERS BY THEME
 
 Остальная часть этого раздела содержит способности монстров, которые можно использовать для усиления противников. Способности сгруппированы по темам или типам, хотя каждая из этих тем является лишь предложением, затрагивающим наиболее очевидный вкус, связанный с той или иной группой способностей. Перепрофилирование способностей монстров очень приветствуется, так что вы можете использовать их на любом типе существ. Сила типа Repulsion может представлять собой магическую волну силы, отталкивающий запах, эффект очарования или страха, корни, хватающие персонажей, или что-либо еще, подходящее для монстра и встречи, в которой он участвует.
-АБЕРРАНТ
+
+### АБЕРРАНТ
 Аберрантные способности помогают придать существу невообразимо чуждый или ужасный вид.
 Стереть память (бонусное действие). В следующий раз, когда это существо поражает цель атакой, урон от атаки становится психическим, а само существо становится невидимым для цели. Цель может сделать Спасбросок интеллекта (КС = 13 + 1/2 CR) как действие или в конце каждого своего хода, при успехе которого невидимость прекращается. Цель, успешно выполнившая спасбросок, получает иммунитет к этому эффекту на 5 минут.
 Эта способность может быть легко переделана в иллюзорный эффект, которым могут пользоваться заклинатели, фей и другие магические существа. Противник может использовать эту силу, чтобы помешать определенному существу увидеть его (и, возможно, забыть о его существовании), вынуждая персонажей изменить тактику.
@@ -390,7 +404,8 @@ Rapid Assault (Costs 3 Actions). The creature makes three attacks against one ta
 Как альтернатива отталкиванию, эта способность может быть использована для перемещения цели в сторону от уязвимого противника. Но ее можно использовать и для того, чтобы помещать героев над ямами (для этого нужно сделать Спасбросок на ловкость КС 10, чтобы ухватиться за край), перемещать героев рядом с опасными противниками, поднимать и бросать их, а также использовать другие коварные тактики. Если изменить способность на направленную на всех существ или на союзников, а не на врагов, то ее можно использовать для перемещения существ-компаньонов из опасной зоны (при этом существа могут намеренно провалить свои броски спасбросков).
 Клейкая кожа (особенность). Когда это существо поражено атакой оружием ближнего боя, оружие прилипает к нему. Существо может снять прилипшее оружие действием и успешной проверкой КС 14 на силу (атлетика). Все предметы, прилипшие к этому существу, развязываются, когда оно умирает.
 Эта способность, несомненно, удивит игроков, но во избежание разочарований ее следует использовать на одном существе. Это может привести к изменению тактики или к тому, что персонажи будут доставать одно оружие за другим, чтобы продолжать атаковать в ближнем бою. Наслаждайтесь описанием отвратительной кожи, которую имеет монстр, чтобы включить эту особенность!
-БЕСТИАЛЬНЫЕ
+
+### БЕСТИАЛЬНЫЕ
 Бестиальные способности подчеркивают свирепую и дикую природу зверей и других диких существ.
 Сотрясающая землю гибель (черта). Это существо должно быть огромного размера или больше. Когда это существо умирает, оно падает на землю, заставляя каждое меньшее существо в радиусе 20 футов от него успешно выполнить Спасбросок на силу (КС 15) или быть повергнутым на землю.
 Эта способность напоминает игрокам о значительных размерах и весе таких существ, как динозавры. Лучше всего она действует, когда несколько существ обладают этой особенностью, так что при падении каждого из них персонажи ощущают эффект от боя. Помимо звероподобных существ, эта особенность хорошо подходит для конструктов, драконов и других физически сильных противников.
@@ -398,15 +413,18 @@ Rapid Assault (Costs 3 Actions). The creature makes three attacks against one ta
 Зверь, который кусает в ответ, чувствует себя диким и опасным. Эта способность эффективна и для других типов существ, особенно для монстров-боссов, которые могут получить преимущество от атаки вне очереди. Это отличная возможность импровизировать, применяя ее к любому противнику, когда вы хотите, чтобы он выглядел более опасным и удивил персонажей. Некоторые монстры-боссы могут иметь несколько реакций, что также хорошо сочетается с этой способностью.  
 СДЕЛАЙТЕ ЭТИ СПОСОБНОСТИ СВОИМИ
 Хотя все эти способности монстров могут быть использованы именно так, как написано, они являются отправной точкой, которую можно изменить в соответствии со своими потребностями. Например, "Вытеснить врагов" - сильный эффект, позволяющий существу перестраивать поле боя в качестве бонусного действия каждый ход. Но в некоторых ситуациях целесообразно ограничить эту силу перезарядкой, чтобы она реже использовалась. Такая сила, как "Доспехи мороза", по умолчанию является реакцией, ограничивающей ее использование драконьим существом один раз в раунд. Но если вы решите, что эта сила подойдет ледяному элементалю, вы можете представить ледяную природу этого существа, снизив урон, но сделав силу особенностью, которая срабатывает каждый раз, когда элементаль атакован. Для ледяного титана можно оставить силу реакцией, но увеличить урон, чтобы представить элементальную мощь титана.
-ОБАЯНИЕ ИЛИ ФЕЙ
+
+### ОБАЯНИЕ ИЛИ ФЕЙ
 Способности к внушению, которыми обладают фейские существа и другие люди, склонные к зачарованию, демонстрируют сверхъестественную способность влиять на персонажей. Эти способности следует использовать осторожно, чтобы создать интересную задачу, не вызывая разочарования и не лишая игроков чувства самостоятельности. Коварные слова (действие). Это существо произносит коварные слова в адрес цели, находящейся в радиусе 20 футов от него, которая может их видеть и слышать. Цель должна преуспеть в броске спасброска по Харизме (КС = 12 + 1/2 CR) или немедленно воспользоваться своей реакцией, чтобы переместиться на 10 футов и произвести атаку оружием ближнего или дальнего боя против цели по выбору этого существа. Внушаемая цель использует атаку, которую она обычно делает против врага.
 Эта способность хорошо работает, если разыграть то, что говорит существо, а затем попросить игрока сделать свой спасбросок и разыграть результат. Превращение персонажа в союзника в бою может стать сильной стороной для противника, поскольку многие персонажи наносят своими действиями больше урона, чем монстры. Вы можете изменить силу, чтобы она работала без траты реакции цели, если считаете, что потеря реакции может снизить удовольствие игрока. Вы также можете решить, будет ли существо, невосприимчивое к состоянию очарования, невосприимчиво к этому эффекту, или же оно использует другой тип внушения.
 Очаровывающие слова (действие, перезарядка 5-6). Это существо выбирает любое количество целей в радиусе 60 футов от него, которые могут его слышать. Каждая цель должна успешно пройти Спасбросок Харизмы (КС = 11 + 1/2 CR) или быть очарована этим существом до конца своего следующего хода. Это внушение, действующее по принципу зоны действия, может сохранить жизнь монстру, не позволяя некоторым или всем персонажам атаковать его. Его лучше всего использовать, когда в бою есть и другие потенциальные цели, чтобы персонажи могли атаковать другое существо и остаться в бою.
-КОНСТРУКТ
+
+### КОНСТРУКТ
 Силы, предполагающие точность и программирование, хорошо подходят для големов, часовых существ и других конструктов. Улучшенная критическая дистанция (особенность). Атаки этого существа дают критическое попадание при броске 17-20.
 Эта способность особенно хорошо действует на несколько существ с низким уровнем угрозы, создавая больше шансов, что одно или несколько из них получат крит. Дистанцию критического попадания можно изменять в зависимости от истории, которую вы рассказываете. Например, конструкты с низким ХР и критическим диапазоном 15-20 могут быть очень забавными, нанося неожиданно сильные удары, но быстро умирая. Вы также можете использовать эту способность практически для любого другого типа существ, представляя сверхъестественную меткость или боевую подготовку. Будьте осторожны, наделяя грозных противников этой особенностью, и подумайте об уменьшении ее дистанции - особенно на низких уровнях игры, где критические попадания могут сильно повлиять на игру и легко привести к смерти персонажа. Но, да, скорпионовый тираннозавр действительно звучит потрясающе. Erratic Gears (черта). В начале каждого хода этого существа бросьте К6, чтобы определить, что оно делает: 1: Внутренний механизм существа перестает работать, и в этот ход оно ничего не делает. 2: Существо действует нормально. 3-5: Существо испытывает прилив сил, что заставляет его наносить дополнительный CR-урон при каждой атаке в этот ход. 6: Существо ускоряется, позволяя использовать два действия в этот ход.
 Хаотическая природа этой силы подходит для конструкций, в которых произошли сбои или которые не находятся под руководством создателя. Лучше всего она действует на нескольких существ, чтобы в среднем они были эффективны и интересны. Эта способность должна быть не только эффективной, но и вызывающей, но вы можете изменить ее эффект.
-ДРАКОНИК
+
+### ДРАКОНИК
 Древние и внушающие благоговение существа, драконы могут наделять силой любых других существ, которые им служат. Существа также могут стремиться украсть сущность дракона или имитировать его способности. Приведенные ниже способности связаны с конкретными типами драконов, но их можно легко переделать, изменив типы урона или эффекты, чтобы представить других драконов.
 Кислотное оружие (особенность). В первый раз за ход, когда это существо наносит удар оружием, атака наносит дополнительный урон кислотой 2 + CR, а цель получает кумулятивный штраф -1 к КЗ (максимум -3) до конца встречи.
 Броня мороза (реакция). Когда это существо поражено атакой оружием ближнего боя, атакующее существо получает 4 + CR урона холодом, а его скорость снижается вдвое до конца следующего хода.
@@ -415,20 +433,22 @@ Rapid Assault (Costs 3 Actions). The creature makes three attacks against one ta
 Удар ядом (особенность). Когда это существо в первый раз за ход наносит удар оружием, атака наносит дополнительно 2 + CR урона ядом, а цель получает 2 + CR урона ядом в начале каждого своего хода. В конце каждого хода цель может сделать бросок на спасбросок по Телосложению (КС = 10 + 1/2 CR), в случае успеха эффект прекращается.
 Эти силы могут быть использованы на гуманоидах или других существах, служащих драконам, или могут быть переделаны для работы в качестве элементальных сил или для представления зверей или чудовищ, связанных с элементальными силами. Например, массивный зимний волк может иметь шкуру, излучающую холод, что представлено силой "Доспехи мороза".
 Предполагается, что сила "Оружие Кислоты" наносит доспехам повреждения, которые легко восстанавливаются. Однако вы можете решить, что штраф длится до тех пор, пока цель не сможет восстановить доспехи во время короткого или длительного отдыха.
-ЭЛЕМЕНТАРНЫЙ
+
+### ЭЛЕМЕНТАРНЫЙ
 Следующие способности могут быть модифицированы для отражения определенного типа элементальных существ. Добавление этих способностей к элементалям не только усиливает их, но и помогает лучше передать их элементальную природу. Эти способности можно использовать и с другими типами существ, отражая связь существа с окружающей средой, связанной с определенной стихией, или с каким-либо другим фактором, наделившим его элементальной энергией.
 Элементальный саван (реакция, 1/энкаунтер). Когда это существо поражено атакой ближнего боя, его тело окутывается энергией того типа, с которым оно связано (кислота, дробящий удар, холод, огонь, молния или гром), до начала следующего хода. Пока это существо окутано, любое существо, прикоснувшееся к нему или поразившее его атакой ближнего боя в радиусе 5 футов от него (включая сработавшего атакующего), получает 5 + CR урона соответствующего типа.
 Персонаж может продолжить атаковать противника, обладающего этой силой, но при этом он получит урон. Это может быть отличным способом убедить персонажей совершить другие действия, например, взаимодействовать с важными небоевыми элементами встречи. 18
 Длительность действия этой силы существенно отличается от аналогичных аур щита, но за время действия она может нанести большой урон. Можно увеличить количество раз за встречу, когда можно использовать эту силу, или даже привязать ее использование к какому-либо предмету или механизму в столкновении, чтобы персонажи могли отключить этот механизм для выключения силы. Если вы хотите, чтобы саван работал как щит и действительно отвлекал персонажей от атаки, он также может давать противнику временные хиты. Elemental Seepage (черта). Если количество хитов этого существа ниже половины максимального, оно излучает ауру элементальной энергии того типа, с которым оно связано (кислота, дробящий удар, холод, огонь, молния или гром). Любое существо, находящееся в пределах 10 футов от этого существа в первый раз за ход или начинающее свой ход, получает 5 урона (10 урона, если это существо CR 12 или выше) связанного типа.
 Если эта способность действует на нескольких существ в столкновении, она побуждает персонажей сосредоточить огонь, чтобы столкнуться с меньшим количеством аур. Вы можете уменьшить или увеличить ауру, чтобы изменить ее смертоносность и количество персонажей, на которых она окажет тактическое воздействие. Относительно низкий урон этой силы позволяет использовать ее на нескольких существах, но если использовать ее только на одном или двух существах, то урон может быть равен CR или даже 5 + CR.
 
-ЛИДЕРСТВО
+### ЛИДЕРСТВО
 Способности лидера лучше всего работают на монстрах, выступающих в роли босса для других существ, демонстрируя, как они командуют или поддерживают своих подчиненных. Командир (особенность). Пока это существо имеет половину максимального количества хитов или выше, каждый союзник в радиусе 30 футов от него получает бонус +2 к броскам урона и атаки.
 Разыграйте указания, которые существо с этой особенностью раздает подчиненным, направляя их атаки и поднимая их боевой дух. Установив, что командир, выглядящий здоровым, воодушевляет свои войска, игроки могут понять, что необходимо
 использовать Огонь, чтобы покончить с выгодой. Для усиления эффекта бонус +2 к атаке может быть заменен преимуществом. Фанатизм (особенность). Пока у этого существа меньше половины максимального количества хитов, каждый союзник в радиусе 30 футов от него имеет преимущество при бросках атаки. Кроме того, когда это существо получает урон, а союзник находится в радиусе 5 футов от него, это существо получает половину урона, а выбранный союзник - оставшийся урон. Эта способность рисует в бою иную картину, чем способность "Командир", показывая лидера, чье отчаяние подпитывает ярость и преданность его глупых последователей.  
 Воодушевить войска (реакция). Когда это существо успешно выполняет спасбросок или когда бросок атаки против него промахивается, один союзник, который видит это существо, получает 5 + 1/2 CR временных хитов.
 Вы можете сделать эту способность особенностью, если хотите, чтобы она стала центральным элементом встречи. Умные персонажи вместо этого будут атаковать других существ, но это тоже может сыграть в пользу лидера.
-МАГИЯ
+
+### МАГИЯ
 Магические способности могут представлять собой заклинания и эльдритовую энергию, но также могут быть связаны с божественными благословениями, магическими предметами или артефактами, а также способностью подключаться к мощным источникам потусторонней энергии. Многие блоки характеристик существ содержат варианты атак, напоминающие заклинания, но не названные таковыми в явном виде. По умолчанию в этом разделе предполагается, что магические способности монстров должны одинаково хорошо работать как с заклинанием, так и с атакой, напоминающей заклинание. Поэтому просто замените формулировку "произносит заклинание" на "произносит заклинание или использует действие, напоминающее заклинание", чтобы удовлетворить ваше намерение. Аналогично, некоторые существа имеют традиционные ячейки для заклинаний, в то время как другие могут использовать определенное количество заклинаний в день. В данном разделе эти два подхода к сотворению заклинаний считаются взаимозаменяемыми, хотя вы можете регулировать их по своему усмотрению.
 Осторожное колдовство (черта). Когда это существо сотворяет заклинание, заставляющее одно или несколько существ сделать спасбросок, оно может выбрать до трех таких существ. Каждое из выбранных существ невосприимчиво к эффектам заклинания.
 Осторожное колдовство позволяет Заклинателю использовать мощные заклинания, действующие в зоне поражения, и исключать некоторых или всех своих спутников. Это может стать забавным сюрпризом во время боя в небольшом помещении.
@@ -449,11 +469,13 @@ Rapid Assault (Costs 3 Actions). The creature makes three attacks against one ta
 Непреклонные союзники (черта). Когда союзник, который видит это существо, уменьшается до 0 хитов, он немедленно превращается в зомби (сохраняя свой первоначальный блок характеристик, но получая тип нежити) и встает с 1 хитом. С этого момента, если урон снижает зомби до 0 хитов, он должен сделать Спасбросок Конституции с КС 5 + полученный урон, если только урон не лучистый или не получен в результате критического попадания. В случае успеха зомби снижается до 1 хита. Любой союзник, ставший нежитью благодаря этой особенности, уничтожается, если это существо умирает или уничтожается.
 Ролевая игра некроманта, обладающего этой силой, призывает своих павших союзников восстать и поразить героев. При этом необходимо срочно победить некроманта, а не его союзников, так как убийство союзников приводит лишь к появлению новой нежити. Withering Blow (бонусное действие, перезарядка 4-6). В следующий раз, когда это существо наносит атаку, цель получает 5 + CR некротического урона в начале каждого своего хода. В конце каждого хода цель может сделать Спасбросок по Телосложению (КС = 10 + 1/2 CR), при Успехе эффект прекращается. Эффект также прекращается, если это существо умирает или уничтожается.
 Для максимального эффекта опишите, как от этого удара плоть персонажа вянет, сморщивается и приобретает серый цвет неживой плоти. Для еще большего эффекта можно было бы сделать так, чтобы дополнительный урон от этой силы также уменьшал максимальное количество хитов у цели. Но это, пожалуй, слишком зло. Возможно.
-РАСТЕНИЕ И ЯД
+
+### РАСТЕНИЕ И ЯД
 Эти способности одинаково хорошо действуют на растительных существ, рептилий и других врагов, которые могут быть ядовитыми или ядовитыми. Ядовитая гибель (Яд). Когда у этого существа уменьшается количество хитов до 0, оно выпускает струю яда. Каждое существо в радиусе 30 футов от этого существа должно успешно выполнить Спасбросок на ловкость (КС = 10 + 1/2 CR) или получить 2 + CR урона ядом.
 Эту особенность можно использовать и для других типов существ, например элементалей или нежити, изменив тип урона. Аналогичным образом можно изменить область действия, чтобы лучше отразить характер монстра или желаемую задачу. Расстояние по умолчанию рассчитано на одного монстра, обладающего этой способностью. Если в столкновении участвуют несколько существ, расстояние можно уменьшить до 5 или 10 футов. Вирулентный яд (особенность). Атаки этого существа, наносящие урон ядом, игнорируют устойчивость цели к урону ядом. Если цель имеет иммунитет к урону от яда, то вместо этого она имеет устойчивость к урону от атак этого существа. Кроме того, в первый раз за ход, когда это существо наносит цели урон ядом, эта цель отравлена до конца следующего хода.
 Яд - обычный тип урона, к которому персонажи могут сопротивляться, что может снизить сложность борьбы с ядовитыми или ядовитыми противниками. Вы можете упростить эту способность и уменьшить ее силу, убрав состояние отравления, или найти баланс, предоставив Спасбросок по Телосложению (КС = 10 + 1/2 CR) против этого состояния.  
-ПЛУТ
+
+### ПЛУТ
 Коварные или неуклюжие существа могут воспользоваться этими способностями типа "Плут".
 Самозванство (бонусное действие, перезарядка 6). До начала своего следующего хода это существо меняет свой облик, чтобы выглядеть точно так же, как другое существо, находящееся в пределах 5 футов от него и не более чем на один размер меньше или больше этого существа. Другие существа должны сделать проверку Мудрости (Восприятие) (КС = 10 + 1/2 CR) каждый раз, когда они атакуют это существо или существо, выдающее себя за него. В случае провала атака будет произведена не по той цели.
 Эта способность может быть описана как способность к перевертыванию, эффект иллюзии, заманчивые слова фей или эффект замешательства, вызванный аберрацией.
@@ -465,7 +487,8 @@ Rapid Assault (Costs 3 Actions). The creature makes three attacks against one ta
 Эта способность является альтернативой особенности "Легендарное сопротивление". Благодаря стоимости хитов персонажи могут с большей выгодой применять заклинания и использовать особенности, требующие броска на спасение, зная, что успех противника при выполнении броска на спасение влечет за собой другие расходы. В то же время монстр может использовать эту способность чаще, чем легендарную Устойчивость, что защищает его от повторного использования свойств, которые могут помешать одиночному существу быть эффективным. В качестве альтернативы можно заменить полученный урон на потерю способности использовать одно из своих действий или особенностей до конца следующего хода.
 Устойчивость к магии (черта). Этот монстр имеет преимущество при спасбросках против заклинаний и других магических эффектов. Отличный вариант при создании одиночных монстров - наделить их способностью защищаться от заклинаний и магических эффектов, обычной для большинства легендарных или высокомагических монстров. Устойчивость к магии (черта). Когда это существо подвергается заклинанию или другому магическому эффекту, не дающему спасброска, оно может сделать спасбросок на Харизму с КС 15 и избежать эффекта в случае успеха. Эта особенность позволяет создать еще более сильного врага, не поддающегося магии. Вы можете изменить показатель способности, используемый для броска спасброска, чтобы отразить характер конкретного существа, или основываться на типе эффекта, которого удается избежать. Персонажам станет интересно, когда монстр-босс неожиданно проломит стены, созданные заклинанием "Силовая клетка", или преодолеет какой-нибудь столь же мощный эффект. Однако используйте эту способность осторожно - и не давайте игрокам наши электронные адреса. Ultimate Resolve (черта). Если это существо получает урон, будучи недееспособным, парализованным или шокированным, оно получает дополнительную атаку в следующий раз, когда использует действие "Атака". Эта особенность может дать максимум одну дополнительную атаку, если существо имеет CR 6 или ниже, две дополнительные атаки, если оно имеет CR 7 - CR 12, и три дополнительные атаки, если оно имеет CR 13 или выше.
 Это отличная способность для боссов или одиночных монстров, которые могут быть лишены действий из-за тактики персонажей. Отказ в действии все равно происходит, но у существа есть шанс компенсировать его.
-ВОИН
+
+### ВОИН
 Способности воина представляют собой тактику и возможности, отточенные в бою.
 Бросить вызов противнику (бонусное действие, перезарядка 4-6). В следующий раз, когда это существо поразит цель, в дополнение к обычному эффекту атаки эта цель будет брошена  
 брошен вызов. Бросившее вызов существо имеет помеху при бросках атаки против любого существа, кроме бросившего вызов. В конце каждого своего хода бросившее вызов существо может сделать спасбросок на харизму (КС = 10 + 1/2 CR) и при успехе завершить вызов на себя.
@@ -475,7 +498,8 @@ Rapid Assault (Costs 3 Actions). The creature makes three attacks against one ta
 Меткий выстрел (особенность). Когда это существо наносит удар оружием дальнего боя, цель должна успешно выполнить Спасбросок на силу (КС = 9 + 1/2 CR) или ее скорость уменьшится до 0. Пораженное существо может повторить Спасбросок в конце своего хода, прекратив эффект на себе в случае успеха.
 Всего один или два бойца с этой особенностью могут заставить персонажей изменить тактику, так как некоторые из них окажутся прижатыми к земле. Чтобы усилить эту способность, можно наложить состояние Обездвиживания вместо простого снижения скорости. В любом случае, будьте осторожны, чтобы не переусердствовать с этой способностью и не разочаровать игроков.
 Остальная часть этого раздела содержит способности монстров, которые можно использовать для усиления противников. Способности сгруппированы по темам или типам, хотя каждая из этих тем является лишь предложением, затрагивающим наиболее очевидный вкус, связанный с той или иной группой способностей. Перепрофилирование способностей монстров очень приветствуется, так что вы можете использовать их на любом типе существ. Сила типа Отталкивание может представлять собой магическую волну силы, отталкивающий запах, эффект очарования или страха, корни, хватающие персонажей, или что-либо еще, подходящее для монстра и встречи, в которой он участвует.
-АБЕРРАНТ
+
+### АБЕРРАНТ
 Аберрантные способности помогают придать существу невообразимо чуждый или ужасный вид.
 Стереть память (бонусное действие). В следующий раз, когда это существо поражает цель атакой, урон от атаки становится психическим, а само существо становится невидимым для цели. Цель может сделать Спасбросок интеллекта (КС = 13 + 1/2 ПО) как действие или в конце каждого своего хода, при успехе которого невидимость прекращается. Цель, успешно выполнившая спасбросок, получает иммунитет к этому эффекту на 5 минут.
 Эта способность может быть легко переделана в иллюзорный эффект, которым могут пользоваться заклинатели, фей и другие магические существа. Противник может использовать эту силу, чтобы помешать определенному существу увидеть его (и, возможно, забыть о его существовании), вынуждая персонажей изменить тактику.
@@ -865,7 +889,7 @@ Sharpshooter. The %%creaturename%%’s ranged weapon attacks ignore half cover a
 Steady Aim (3/Day). As a bonus action, the %%creaturename%%takes careful aim at a creature it can see within range of its ranged weapon. Until the end of its turn, the %%creaturename%%deals an an extra 5 damage with each of its ranged weapon attacks against the target.
 Steady Aim. The %%creaturename%%’s longbow attacks ignore half and three quarters cover and deal an additional 4 (1d8) damage (included in the attack).
 World-Class Bowmanship. If the %%creaturename%% has disadvantage on attack rolls made with its longbow, it can choose to ignore the disadvantage. If it does so, it cannot benefit from effects that would grant it advantage on the attack.
-CAVALRY
+### CAVALRY
 Coordinated Charge. While mounted, if the %%creaturename%%begins or ends their turn within 10 feet of at least two other mounted creatures with this trait, the trooper can make a coordinated charge. During a coordinated charge, if they move at least 20 feet straight toward a target, the %%creaturename%%gains advantage on the first attack roll they make against that target.
 Defensive Maneuver. The %%creaturename%%adds 2(1d4) to its AC against one melee attack that would hit it, or adds 2(1d4) to its mount's AC against one melee attack that would hit the mount. To do so, the %%creaturename%%
 Lance Charge. If the %%creaturename%% moves at least 30 feet straight toward a target while mounted, and then hits it with a spear attack on the same turn, the target takes an extra 4 (1d8) piercing damage.
